--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,9 +50,9 @@
                                 <a class="mr-auto" href="#"
                                     (click)="showTestMethodOfTestScript(i)">{{ testScript.name }}</a>
 
-                                <a class="ml-3" data-toggle="modal" data-target=".bd-example-modal-lg"
+                                <a class="ml-3 show_hide" data-toggle="modal" data-target=".bd-example-modal-lg"
                                     title="Create New Test Method" href="#"><i class="fas fa-plus"></i></a>
-                                <a class="ml-3" href="#"><i class="fas fa-edit"></i></a>'
+                                <a class="ml-3 show_hide" href="#"><i class="fas fa-edit"></i></a>
 
 
                                 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
@@ -107,9 +107,9 @@
                                 <a href="#" (click)="showTestCaseOfTestMethod(j)"
                                     class="mr-auto">{{ testMethod.methodName }}</a>
                                 <div>
-                                    <a class="ml-3" title="Create New Test Case" href="#"><i
+                                    <a class="ml-3 show_hide" title="Create New Test Case" href="#"><i
                                             class="fas fa-plus"></i></a>
-                                    <a class="ml-3" href="#"><i class="fas fa-edit"></i></a>
+                                    <a class="ml-3 show_hide" href="#"><i class="fas fa-edit"></i></a>
                                 </div>
                             </li>
                         </ul>
@@ -151,8 +151,8 @@
                                 *ngFor="let testCase of listTestCaseOfMethod; let i = index">
                                 <a href="#" class="mr-auto">{{ testCase.testCaseName }}</a>
                                 <div>
-                                    <a class="ml-3" href="#"><i class="fas fa-plus"></i></a>
-                                    <a class="ml-3" href="#"><i class="fas fa-edit"></i></a>
+                                    <a class="ml-3 show_hide" href="#"><i class="fas fa-plus"></i></a>
+                                    <a class="ml-3 show_hide" href="#"><i class="fas fa-edit"></i></a>
                                 </div>
                             </li>
                         </ul>
